fixed word wrap issue (harder than it sounds)

--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -13,8 +13,8 @@
   height: 75vh;
   position: relative;
   font-size: 24px;
-  overflow: hidden;
-  white-space: nowrap;
+  /* overflow: hidden; */
+  /* white-space: nowrap; */
 }
 
 .slides {
@@ -57,9 +57,15 @@ li {
   height: 100vh;
 }
 
+.slides {
+   display: flex;
+}
+
 .js_slide {
+  flex: 1;
+  min-width: 100vw;
   height: 74.54vh;
-  background: #333333;
+  /* background: #333333; */
   background-size: cover;
   background-position: center;
 }
@@ -165,8 +171,11 @@ ul {
   margin-bottom: 5px;
 }
 
-.page-content {
+.body {
   background: #eef0f0;
+}
+.page-content {
+  height: 100vh;
 }
 
 .plugin-panel {
@@ -190,6 +199,10 @@ h6 {
   margin: 0px !important;
 }
 
-/* p {
-  white-space: pre-line; */
-/* } */
+.images {
+   height: 200px;
+}
+
+.image-wrap {
+   padding: 15px;
+}
